2007-01-24  Richard Frith-Macdoanld <rfm@gnu.org>

	* Headers/AppKit/NSButtonCell.h: Fix documentation error.
	* Headers/AppKit/NSMenu.h: Tidy a litte, fix errors in documentation
	markup, fix some documentation cross references.

2007-01-24  Stefan Bidigaray

	* Headers/AppKit/NSMenu.h: Add documentation (patch #5705).

2007-01-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-selectAll:, -deselectAll:) Call
	[setNeedsDisplay:], if something was changed.

2007-01-23  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSBox.h: 
	* Headers/AppKit/NSButtonCell.h: 
	Add documentation for NSTitlePosition and NSButtonType. 
	Patch by <stefanbidi@gmail.com>.
	
	* Source/GSTheme.m (-buttonBorderForStyle:state:): Removed unused variable.
	
2007-01-23  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSTheme.h, 
	* Source/GSTheme.m (-buttonBorderForStyle:state:): New method to
	determine the button border size.
	* Headers/Additions/GNUstepGUI/GSTheme.h (-drawButton:...state:),
	* Source/GSTheme.m (-drawButton:view:style:state:): Don't return a result.
	* Source/NSCell.m (-drawInteriorWithFrame:inView:,
	-drawWithFrame:inView:): Bring drawing of focus ring inline
	with the one in NSButtonCell.
	* Headers/AppKit/NSButtonCell.h: Add MacOS 10.4 methods and
	additional ivars and changed enumerator values. 
	* Source/NSButtonCell.m: Implemented new methods. 
	* Source/NSButtonCell.m (-setButtonType:): Use new enumerator values.
	* Source/NSButtonCell.m (-_init): Use method call to set button type.
	* Source/NSButtonCell.m (-drawInteriorWithFrame:inView:,
	-drawWithFrame:inView:): Use new methods for the drawing.
	* Source/NSButtonCell.m (-cellSize, -drawingRectForBounds:): Use
	new theme method to determine border size.
	* Source/NSButtonCell.m (-encodeWithCoder:, -initWithCoder:):
	Encode/decode new and previously missing ivars.
	* Source/NSMenuItemCell.m (-drawingRectForBounds:): Moved old super
	class code to here.